@@ -16,7 +16,7 @@ parchment.lib.ZUI = Object.subClass({
 	{
 		var self = this,
 		
-		widthInChars = ( gIsIphone && $( document.body ).width() <= 480 ) ? 38 : 80;
+		widthInChars = ( gIsIphone && $( document.body ).width() <= 480 ) ? 38 : parchment.options.width;
 		
 		// Set up the HTML we need
 		library.container.html( '<div id="top-window" class="buffered-window"></div><div id="buffered-windows"></div><div id="content" role="log"></div><div id="bottom"></div>' );
